@@ -309,9 +309,9 @@ AM_CPPFLAGS += -DDEPENDS_ON_LIBICONV=1
 
 # Libtool's library version information for libunistring.
 # See the libtool documentation, section "Library interface versions".
-LTV_CURRENT=1
-LTV_REVISION=2
-LTV_AGE=1
+LTV_CURRENT=2
+LTV_REVISION=0
+LTV_AGE=0
 
 # How to build libunistring.la.
 libunistring_la_LDFLAGS += \
